--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.3.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "@storyblok/react": "^1.3.0",
+    "next": "^12.1.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "storyblok-rich-text-react-renderer": "^2.5.4"
   },
   "devDependencies": {
-    "eslint": "8.23.1",
-    "eslint-config-next": "12.3.0"
+    "autoprefixer": "^10.4.10",
+    "axios": "^0.26.1",
+    "postcss": "^8.4.16",
+    "postcss-preset-env": "^7.4.1",
+    "tailwindcss": "^3.1.8"
   }
 }
