--- a/package.json
+++ b/package.json
@@ -9,17 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.6",
     "@storyblok/react": "^1.3.0",
+    "bootstrap": "^5.2.1",
     "next": "^12.1.0",
     "react": "17.0.2",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "17.0.2",
     "storyblok-rich-text-react-renderer": "^2.5.4"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.10",
+    "@fullhuman/postcss-purgecss": "^5.0.0",
+    "autoprefixer": "^10.4.12",
     "axios": "^0.26.1",
     "postcss": "^8.4.16",
-    "postcss-preset-env": "^7.4.1",
-    "tailwindcss": "^3.1.8"
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-preset-env": "^7.8.2",
+    "sass": "^1.55.0"
   }
 }
