--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@fullhuman/postcss-purgecss": "^5.0.0",
     "autoprefixer": "^10.4.12",
     "axios": "^0.26.1",
+    "eslint": "^8.24.0",
     "postcss": "^8.4.16",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-preset-env": "^7.8.2",
