--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^5.0.0",
+    "@types/node": "^18.8.2",
+    "@types/node-sass": "^4.11.3",
+    "@types/react": "^18.0.21",
     "autoprefixer": "^10.4.12",
     "axios": "^0.26.1",
     "eslint": "^8.24.0",
@@ -32,6 +35,7 @@
     "postcss": "^8.4.16",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-preset-env": "^7.8.2",
-    "sass": "^1.55.0"
+    "sass": "^1.55.0",
+    "typescript": "^4.8.4"
   }
 }
