--- a/package.json
+++ b/package.json
@@ -14,14 +14,21 @@
     "@fortawesome/free-regular-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@hookform/error-message": "^2.0.0",
     "@popperjs/core": "^2.11.6",
+    "@reduxjs/toolkit": "^1.8.5",
     "@storyblok/react": "^1.3.0",
     "bootstrap": "^5.2.1",
+    "js-cookie": "^3.0.1",
     "next": "^12.1.0",
-    "react": "17.0.2",
+    "react": "^17.0.2",
     "react-bootstrap": "^2.5.0",
-    "react-dom": "17.0.2",
-    "storyblok-rich-text-react-renderer": "^2.5.4"
+    "react-hook-form": "^7.19.1",
+    "react-redux": "^8.0.4",
+    "redux-persist": "^6.0.0",
+    "request": "^2.88.2",
+    "storyblok-rich-text-react-renderer": "^2.5.4",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^5.0.0",
@@ -32,9 +39,12 @@
     "axios": "^0.26.1",
     "eslint": "^8.24.0",
     "eslint-config-next": "^12.3.1",
+    "is-nan": "^1.3.2",
+    "object-is": "^1.1.5",
     "postcss": "^8.4.16",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-preset-env": "^7.8.2",
+    "react-dom": "^17.0.2",
     "sass": "^1.55.0",
     "typescript": "^4.8.4"
   }
